
* Logger

	* Allow specifying logger parameters in constructor such
	  as level, progname, datetime_format, formatter. [Feature #12224]
	* Add shift_period_suffix option. [Feature #10772]

* Net::HTTP

  * New method: Net::HTTP.post [Feature #12375]

* Net::FTP

  * Support TLS (RFC 4217).
  * Support hash style options for Net::FTP.new.

* OpenSSL

  * OpenSSL is extracted as a gem and the upstream has been migrated to
    https://github.com/ruby/openssl. OpenSSL still remains as a default gem.
    Refer to its History.md for the full release note. [Feature #9612]

* optparse

  * Add an into option. [Feature #11191]

* pathname

  * New method: Pathname#empty? [Feature #12596]

* Readline

  * Readline.quoting_detection_proc and Readline.quoting_detection_proc=
    [Feature #12659]

* set

  * New methods: Set#compare_by_identity and Set#compare_by_identity?.
    [Feature #12210]

* WEBrick

  * Don't allow , as a separator [Bug #12791]

=== Compatibility issues (excluding feature bug fixes)

* Array#sum and Enumerable#sum are implemented.  [Feature #12217]
  Ruby itself has no compatibility problem because Ruby didn't have sum method
  for arrays before Ruby 2.4.
  However many third party gems, activesupport, facets, simple_stats, etc,
  defines sum method.  These implementations are mostly compatible but
  there are subtle differences.
  Ruby's sum method should be mostly compatible but it is impossible to
  be perfectly compatible with all of them.

* Fixnum and Bignum are unified into Integer  [Feature #12005]
  Fixnum class and Bignum class is removed.
  Integer class is changed from abstract class to concrete class.
  For example, 0 is an instance of Integer: 0.class returns Integer.
  The constants Fixnum and Bignum is bound to Integer.
  So obj.kind_of?(Fixnum) works as obj.kind_of?(Integer).
  At C-level, Fixnum object and Bignum object should be distinguished by
  FIXNUM_P(obj) and RB_TYPE_P(obj, T_BIGNUM).